# site

./: .gitignore  Cargo.toml  Trunk.toml  index.html
.github/workflows/: docker-ghcr-publish.yml  rust.yml  static.yml
content/: content.yaml
doc/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
src/: components.rs  content.rs  main.rs
src/components/: about_section.rs  contact_section.rs  footer_section.rs  hero_section.rs  language_switcher.rs  portfolio_section.rs
src/pages/: home.rs
static/: content.yaml
